--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "express": "^4.16.3",
-    "sqlite3": "^4.0.0"
+    "sqlite3": "^4.0.0",
+    "cookie-parser": "^1.4.5",
+    "jsonwebtoken": "^8.5.1",
+    "dotenv": "^8.2.0"
   },
   "engines": {
     "node": "8.x"
